<resources>
    <string name="app_name">GlideGuide</string>
    <string name="load">加载图片</string>
    <string name="custom_load">自定义加载</string>
    <string name="listener_load">监听器加载</string>
    <string name="extension_load">扩展选项加载</string>
    <string name="request_load">请求选项加载</string>
    <string name="transform_load">变换加载</string>
    <string name="cancel_target">取消目标</string>
    <string name="clear_memory_cache">清理内存缓存</string>
    <string name="clear_disk_cache">清理磁盘缓存</string>
    <string name="start_recycler_activity">启动可利用列表活动</string>>
</resources>
